<resources>
    <string name="app_name">DripNDashProject</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="drip_n_dash">DRIP \'N DASH</string>
    <string name="don_t_have_an_account_sign_up_here">Don\'t have an account? Sign up here!</string>
    <string name="sign_in">Sign in</string>
    <string name="register_to_become_a_dasher">Register to become a Dasher</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="campus">Campus:</string>
    <string name="dorm_room">Dorm Room:</string>
    <string name="gender">Gender:</string>
    <string name="dorm_building">Dorm Building:</string>
    <string name="enter_room_number">Enter Room Number</string>
    <string name="enter_age">Enter Age</string>
    <string name="register_to_become_a_customer">Register to become a Customer</string>

    <string name="dasher">dasher</string>
    <string name="customer">Customer</string>
    <string name="become_a_customer">Become a Customer</string>
    <string name="become_a_dasher">Become a Dasher</string>
    =======
    <string name="request_job">Request Job</string>
    <string name="request_new_job">REQUEST NEW JOB</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="textview">TextView</string>
    <string name="in_progress_jobs">In Progress Jobs</string>
    <string name="try_getting_first_name">TRY GETTING FIRST NAME</string>
    <string name="past_jobs">Past Jobs</string>
    <string name="sign_up_to_become_a_customer_and_make_use_of_our_service">Sign up to become a Customer and make use of our service</string>
    <string name="custinfo">CustInfo</string>
    <string name="dasherinfo">DasherInfo</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="past_jobs_fragment">Past Jobs Fragment</string>
    <string name="current_jobs">Current Jobs</string>
    <string name="request_a_job">Request a Job</string>
    <string name="room_number">Room Number</string>
    <string name="current_stage">Current Stage</string>
    <string name="time_assigned">Time Assigned</string>
    <string name="customer_name">Customer Name</string>
    <string name="time_started">Time Started</string>
    <string name="todo">TODO</string>
    <string name="line_1">Line 1</string>
    <string name="line_2">Line 2</string>
    <string name="request_a_dasher">Request a Dasher</string>
    <string name="add_job_details_here">Add Job Details Here</string>
    <string name="set_job_details">Set Job Details</string>
    <string name="enter_special_instructions_here">Enter special instructions here</string>
    <string name="how_many_loads_of_laundry_will_it_be">How many loads of laundry will it be?</string>
    <string name="submit">Submit</string>
    <string name="status">Status</string>
    <string name="dashername">DasherName</string>
    <string name="dasherName" />
    <string name="nameofdasher">nameOfDasher</string>
    <string name="customername">customerName</string>
    <string name="check_if_there_are_pending_jobs_in_llvingston_apartments">Check if there are pending Jobs in LLvingston Apartments</string>
    <string name="check_if_there_are_pending_jobs_in_livingston">Check if there are pending jobs in Livingston</string>
    <string name="CustomerName" />
    <string name="your_name">Your name</string>
    <string name="email">Email</string>
    <string name="rating">Rating</string>
    <string name="edit">edit</string>
    <string name="save">save</string>


    >>>>>>> 4a3159a3be4933864d824ddba5523108e6d12da1

    <string-array name="plsChooseCampus">
        <item>Please choose campus above</item>
    </string-array>

    <string-array name="campuses">
        <item>Choose your campus</item>
        <item>Busch</item>
        <item>College Ave</item>
        <item>Douglass</item>
        <item>Livingston</item>
    </string-array>
    //ADD MORE DORMS LATER
    <string-array name="buschDorms">
        <item>Choose your dorm</item>
        <item>B.E.S.T. Hall</item>
        <item>Allen Hall</item>
        <item>Buell Apartments</item>
    </string-array>

    <string-array name="liviDorms">
        <item>Choose your dorm</item>
        <item>Livingston Apartments</item>
        <item>Quads</item>
    </string-array>

    <string-array name="collegeAveDorms">
        <item>Choose your dorm</item>
        <item>Brett Hall</item>
        <item>Campbell Hall</item>
        <item>Clothier Hall</item>
    </string-array>

    <string-array name="douglassDorms">
        <item>Choose your dorm</item>
        <item>Henderson Apartments</item>
        <item>Jameson Hall</item>
    </string-array>
    //MAYBE ADD "OTHER" FOR GENDER??
    <string-array name="gender">
        <item>Choose a gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>


</resources>
