<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView5"
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/current_jobs"
        android:textSize="30sp" />

    <Button
        android:id="@+id/buttonRequest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text= "@string/request_a_job"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

    <TableLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView5"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        >
        <TableRow
            android:id="@+id/row1"
            >

            <TextView
                android:layout_column="1"
                android:text="@string/room_number"
                android:padding="6dip" />
            <TextView
                android:layout_column = "2"
                android:text = "@string/customer_name"
                android:padding = "6dip" />
            <TextView
                android:layout_column="3"
                android:text = "@string/current_stage">

            </TextView>
            <TextView
                android:layout_column="4"
                android:text= "@string/time_started"
                android:padding = "6dip" />
        </TableRow>
        <View
            android:layout_height="2dip"
            android:background="#FF909090" />
        <TableRow>
            <TextView
                />
        </TableRow>
        <View
            android:layout_height="2dip"
            android:background="#FF909090" />
        <TableRow>
            <TextView
                />


        </TableRow>


        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

    </TableLayout>
</RelativeLayout>