<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="4dp"
    android:layout_marginBottom="4dp">

        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp">
        <ImageView
            android:id = "@+id/imageViewDasher"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding = "2dp"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/statusTextDasher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/imageViewDasher"
            android:text="@string/line_1"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_toRightOf="@id/imageViewDasher" />

        <TextView
            android:id = "@+id/textCustomerRoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/statusTextDasher"
            android:layout_marginStart="8dp"
            android:layout_marginTop="1dp"
            android:layout_toEndOf="@+id/imageViewDasher"
            android:text="@string/line_2"
            android:textSize="15sp"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@+id/imageViewDasher" />
        <TextView
            android:id="@+id/timeAssignedDasher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:text="@string/time_assigned"
            android:textSize="11sp"
            />
        <TextView
            android:id = "@+id/customerNameText"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/timeAssignedDasher"
            android:text="@string/customername"
            android:layout_alignParentRight="true"
            android:layout_marginTop="1.3dp"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>


</androidx.cardview.widget.CardView>