<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="4dp"
    android:layout_marginBottom="4dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp">



        <ImageView
            android:id = "@+id/imageViewCustomer"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="2dp"
            android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/statusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/imageViewCustomer"
        android:text="@string/status"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_toEndOf="@+id/imageViewCustomer" />

    <TextView
        android:id = "@+id/nameOfDasher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/statusText"
        android:layout_toEndOf="@id/imageViewCustomer"
        android:layout_marginStart="8dp"
        android:layout_marginTop="1dp"
        android:text="@string/nameofdasher"
        android:textSize="15sp"
        android:layout_toRightOf="@id/imageViewCustomer"
        android:layout_marginLeft="8dp" />
    <TextView
        android:id = "@+id/timeAssignedCustomer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/time_assigned"
        android:textSize="11sp"/>

    </RelativeLayout>
</androidx.cardview.widget.CardView>